# llm_vkr

./: .dockerignore  .env  Dockerfile  main.py  pyproject.toml
app/routers/: chat.py
app/services/: model_qwen.py
